Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,11 +35,127 @@
 
 <p><strong>Atendimento:</strong> Segunda 13:30 - 14:30</p>
 
-<p><strong>Lista de e-mail:</strong> Os alunos devem se cadastrar na
-lista de e-mail do curso. <strong>Todas as comunicações serão feitas pela lista.</strong>
+<p><strong>Lista de e-mail:</strong> Os alunos devem se cadastrar na lista de e-mail do curso.
 Use o link abaixo para cadastrar seu e-mail:</p>
 
 <p><a href="http://goo.gl/forms/I5epmPCg3e">http://goo.gl/forms/I5epmPCg3e</a></p>
+
+<p><strong>Todas as comunicações serão feitas pela lista.</strong></p>
+
+<h2>
+<a id="ementa" class="anchor" href="#ementa" aria-hidden="true"><span class="octicon octicon-link"></span></a>Ementa</h2>
+
+<p>Introdução ao estudo da computação. Conceito de algoritmo e programação
+estruturada. Linguagens de programação. Procedimentos, funções e módulos. Erros
+nas aproximações numéricas. Resolução numérica de equações algébricas e
+transcendentes. Interpolação. Diferenciação e integração numérica. Resolução
+numérica de equações diferenciais. Resolução de triângulos esféricos. Solução
+numérica de sistemas lineares. Aplicações à oceanografia.</p>
+
+<h2>
+<a id="objetivos" class="anchor" href="#objetivos" aria-hidden="true"><span class="octicon octicon-link"></span></a>Objetivos</h2>
+
+<ul>
+<li>Aprender conceitos básicos de programação e pensamento computacional.</li>
+<li>Aprender métodos para a solução numérica de problemas matemáticos.</li>
+<li>Aplicar os conceitos de programação e cálculo numérico a problemas reais da
+oceanografia e ciências exatas.</li>
+</ul>
+
+<h2>
+<a id="aulas" class="anchor" href="#aulas" aria-hidden="true"><span class="octicon octicon-link"></span></a>Aulas</h2>
+
+<p>As aulas terão componentes expositivos e práticos, com 60-80% do tempo dedicado
+às atividades práticas. Vamos abordar um tema por semana. Cada tema terá uma
+atividade prática valendo nota (ver "Avaliação" abaixo).</p>
+
+<p>Eu encorajo fortemente que vocês <strong>perguntem e discutam</strong> durante as aulas. Não
+deixe uma dúvida para depois. Minha política é que não existem perguntas
+"bestas", "irrelevantes", "óbvias". Não tolero comportamento ofensivo e a
+ridicularização dos colegas.</p>
+
+<p>As práticas serão feitas em grupo, geralmente no computador. Por favor,
+<strong>tragam seus laptops para a aula</strong>. Alunos que não possuem computador não
+serão prejudicados. Precisaremos de ao menos um computador por grupo.</p>
+
+<p>Textos, códigos, slides, etc estarão disponíveis no site da disciplina.</p>
+
+<h2>
+<a id="avaliação" class="anchor" href="#avalia%C3%A7%C3%A3o" aria-hidden="true"><span class="octicon octicon-link"></span></a>Avaliação</h2>
+
+<p>Teremos duas fontes de nota:</p>
+
+<ol>
+<li>Média das notas das atividades práticas (70% da nota)</li>
+<li>Projeto realizado ao longo do curso (30% da nota)</li>
+</ol>
+
+<p>As partes práticas das aulas serão baseadas no tema da semana.  Os alunos
+receberão instruções para realizar a prática referente ao tema e deverão
+entregar a solução ao final da aula (um por grupo).  A média das práticas será
+feita com base nas notas de cada prática (uma por tema).  Para não prejudicar
+alunos que faltarem eventualmente, vou descartar as duas menores notas.</p>
+
+<p>Os projetos serão feitos em grupo, com um tema diferente para cada grupo (a
+definir). O projeto será desenvolvido ao longo do semestre.</p>
+
+<h2>
+<a id="conduta" class="anchor" href="#conduta" aria-hidden="true"><span class="octicon octicon-link"></span></a>Conduta</h2>
+
+<h3>
+<a id="assiduidade" class="anchor" href="#assiduidade" aria-hidden="true"><span class="octicon octicon-link"></span></a>Assiduidade</h3>
+
+<p>Será cobrada presença em sala de aula através assinatura de lista de presença.
+Alunos que faltarem a uma aula receberão zero na atividade prática daquela
+aula.  O limite de faltas em hora aula é de 18h (~3 aulas).</p>
+
+<h2>
+<a id="plágio" class="anchor" href="#pl%C3%A1gio" aria-hidden="true"><span class="octicon octicon-link"></span></a>Plágio</h2>
+
+<p><strong>Cuidado com cópias e plágio.</strong> Trabalhos que forem cópias integral ou parcial
+do trabalho de colegas ou de outras fontes receberão nota <strong>zero</strong>. Citem todas
+suas fontes de informação (mesmo que seja a Wikipedia).</p>
+
+<h2>
+<a id="bibliografia" class="anchor" href="#bibliografia" aria-hidden="true"><span class="octicon octicon-link"></span></a>Bibliografia</h2>
+
+<p><a href="http://swcarpentry.github.io/git-novice/">Software Carpentry v5.3: Version control with
+git</a></p>
+
+<p><a href="http://swcarpentry.github.io/shell-novice/">Software Carpentry v5.3: The Unix
+Shell</a></p>
+
+<p><a href="http://swcarpentry.github.io/python-novice-inflammation/">Software Carpentry v5.3: Programming with
+Python</a></p>
+
+<p><a href="http://software-carpentry.org/v4/python/index.html">Software Carpentry v4:
+Python</a></p>
+
+<p>Python Scientific Lecture Notes.
+<a href="http://scipy-lectures.github.io/">http://scipy-lectures.github.io/</a></p>
+
+<p>Pilgrim, M. (2004), Dive Into Python, Apress, Berkeley, CA : New York.
+[<a href="http://www.diveintopython.net/">disponível online</a>]</p>
+
+<p>Numerical Methods, Wikibooks,
+<a href="https://en.wikibooks.org/wiki/Numerical_Methods">https://en.wikibooks.org/wiki/Numerical_Methods</a></p>
+
+<p>Press, W. H., Teukolsky, S. A, Vetterling, W. T. e Flannery, B. P. Numerical
+recipes in C: The art of scientific computing, second edition, Cambridge
+University Press, 1992</p>
+
+<p>Como em tudo na vida, o <a href="http://bfy.tw/1UCK">Google é seu melhor amigo</a>.
+Há uma vastidão de recursos online sobre programação em Python. A maioria está
+em <strong>inglês</strong> então busquem com palavras chave nessa língua. Exemplos:
+"scientific python", "python programming".</p>
+
+<p>Vocês vão se deparar diversas vezes com o site
+<a href="http://stackoverflow.com/">StackOverflow</a> de perguntas e respostas. Esse site
+é um dos melhores e mais utilizados recursos para programação. As repostas são
+quase sempre de qualidade.</p>
+
+<h2>
+<a id="cronograma" class="anchor" href="#cronograma" aria-hidden="true"><span class="octicon octicon-link"></span></a>Cronograma</h2>
 
 <h2>
 <a id="license" class="anchor" href="#license" aria-hidden="true"><span class="octicon octicon-link"></span></a>License</h2>
