Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@ Use o link abaixo para cadastrar seu e-mail:</p>
 
 <p><a href="http://goo.gl/forms/I5epmPCg3e">http://goo.gl/forms/I5epmPCg3e</a></p>
 
-<p><strong>Todas as comunicações serão feitas pela lista.</strong></p>
+<p><strong>TODOS OS COMUNICADOS SERÃO FEITOS ATRAVÉS DA LISTA DE E-MAIL.</strong></p>
+
+<p><a href="http://www.phdcomics.com/comics.php?f=1790"><img src="images/phd032515s.jpg" alt="http://www.phdcomics.com/comics.php?f=1790"></a></p>
 
 <h2>
 <a id="ementa" class="anchor" href="#ementa" aria-hidden="true"><span class="octicon octicon-link"></span></a>Ementa</h2>
@@ -155,7 +157,115 @@ em <strong>inglês</strong> então busquem com palavras chave nessa língua. Exe
 quase sempre de qualidade.</p>
 
 <h2>
+<a id="software" class="anchor" href="#software" aria-hidden="true"><span class="octicon octicon-link"></span></a>Software</h2>
+
+<p>Em breve.</p>
+
+<h2>
 <a id="cronograma" class="anchor" href="#cronograma" aria-hidden="true"><span class="octicon octicon-link"></span></a>Cronograma</h2>
+
+<table>
+<thead>
+<tr>
+<th align="center">Aula</th>
+<th align="left">Data (T1 - T2)</th>
+<th align="left">Tema</th>
+<th align="right">Prática</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td align="center">1</td>
+<td align="left">26-27/08 - 28/08</td>
+<td align="left">Apresentação e introdução a algoritmos e logica de programação</td>
+<td align="right"></td>
+</tr>
+<tr>
+<td align="center">2</td>
+<td align="left">02-03/09 - 04/09</td>
+<td align="left">Unix shell (básico) e Controle de versão com git</td>
+<td align="right"></td>
+</tr>
+<tr>
+<td align="center">3</td>
+<td align="left">09-10/09 - 11/09</td>
+<td align="left">Python: variáveis, loops e condições</td>
+<td align="right"></td>
+</tr>
+<tr>
+<td align="center">4</td>
+<td align="left">17-16/09 - 18/09</td>
+<td align="left">Python: estruturação de um programa e funções</td>
+<td align="right"></td>
+</tr>
+<tr>
+<td align="center">5</td>
+<td align="left">23-24/09 - 25/09</td>
+<td align="left">Python: arrays, numpy e gráficos simples</td>
+<td align="right"></td>
+</tr>
+<tr>
+<td align="center">6</td>
+<td align="left">30-01/10 - 02/10</td>
+<td align="left">Introdução a métodos numéricos. Integração</td>
+<td align="right"></td>
+</tr>
+<tr>
+<td align="center">7</td>
+<td align="left">08-07/10 - 09/10</td>
+<td align="left">Solução de sistemas lineares</td>
+<td align="right"></td>
+</tr>
+<tr>
+<td align="center">8</td>
+<td align="left"></td>
+<td align="left">Método dos mínimos quadrados</td>
+<td align="right"></td>
+</tr>
+<tr>
+<td align="center">9</td>
+<td align="left"></td>
+<td align="left">Interpolação</td>
+<td align="right"></td>
+</tr>
+<tr>
+<td align="center">10</td>
+<td align="left"></td>
+<td align="left"></td>
+<td align="right"></td>
+</tr>
+<tr>
+<td align="center">11</td>
+<td align="left"></td>
+<td align="left"></td>
+<td align="right"></td>
+</tr>
+<tr>
+<td align="center">12</td>
+<td align="left"></td>
+<td align="left"></td>
+<td align="right"></td>
+</tr>
+<tr>
+<td align="center">13</td>
+<td align="left"></td>
+<td align="left">Solução de equações diferenciais parciais</td>
+<td align="right"></td>
+</tr>
+<tr>
+<td align="center">14</td>
+<td align="left"></td>
+<td align="left"></td>
+<td align="right"></td>
+</tr>
+<tr>
+<td align="center">15</td>
+<td align="left"></td>
+<td align="left"></td>
+<td align="right"></td>
+</tr>
+</tbody>
+</table>
 
 <h2>
 <a id="license" class="anchor" href="#license" aria-hidden="true"><span class="octicon octicon-link"></span></a>License</h2>
