Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -162,7 +162,15 @@ quase sempre de qualidade.</p>
 <p>Em breve.</p>
 
 <h2>
+<a id="projeto" class="anchor" href="#projeto" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projeto</h2>
+
+<p>Em breve.</p>
+
+<h2>
 <a id="cronograma" class="anchor" href="#cronograma" aria-hidden="true"><span class="octicon octicon-link"></span></a>Cronograma</h2>
+
+<p>Esse cronograma ainda não é definitivo. Provavelmente sofrerá alterações ao
+longo do semestre.</p>
 
 <table>
 <thead>
@@ -219,49 +227,49 @@ quase sempre de qualidade.</p>
 <tr>
 <td align="center">8</td>
 <td align="left"></td>
-<td align="left">Método dos mínimos quadrados</td>
+<td align="left">Método dos mínimos quadrados e Interpolação</td>
 <td align="right"></td>
 </tr>
 <tr>
 <td align="center">9</td>
 <td align="left"></td>
-<td align="left">Interpolação</td>
+<td align="left">Transformada de Fourier: parte 1</td>
 <td align="right"></td>
 </tr>
 <tr>
 <td align="center">10</td>
 <td align="left"></td>
-<td align="left"></td>
+<td align="left">Transformada de Fourier: parte 2</td>
 <td align="right"></td>
 </tr>
 <tr>
 <td align="center">11</td>
 <td align="left"></td>
-<td align="left"></td>
+<td align="left">Solução de equações diferenciais parciais: método das diferenças finitas</td>
 <td align="right"></td>
 </tr>
 <tr>
 <td align="center">12</td>
 <td align="left"></td>
-<td align="left"></td>
+<td align="left">Solução numérica da equação de difusão</td>
 <td align="right"></td>
 </tr>
 <tr>
 <td align="center">13</td>
 <td align="left"></td>
-<td align="left">Solução de equações diferenciais parciais</td>
+<td align="left">Solução numérica da equação da onda</td>
 <td align="right"></td>
 </tr>
 <tr>
 <td align="center">14</td>
 <td align="left"></td>
-<td align="left"></td>
+<td align="left">Triângulos esféricos e representação de dados em mapas</td>
 <td align="right"></td>
 </tr>
 <tr>
 <td align="center">15</td>
 <td align="left"></td>
-<td align="left"></td>
+<td align="left">Apresentação dos projetos</td>
 <td align="right"></td>
 </tr>
 </tbody>
