Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Use o link abaixo para cadastrar seu e-mail:</p>
 
 <p><strong>TODOS OS COMUNICADOS SERÃO FEITOS ATRAVÉS DA LISTA DE E-MAIL.</strong></p>
 
-<p><a href="http://www.phdcomics.com/comics.php?f=1790"><img src="images/phd032515s.jpg" alt="http://www.phdcomics.com/comics.php?f=1790"></a></p>
+<p><a href="http://www.phdcomics.com/comics.php?f=1790"><img src="https://raw.githubusercontent.com/leouieda/matematica-especial/master/images/phd032515s.jpg" alt="http://www.phdcomics.com/comics.php?f=1790"></a></p>
 
 <h2>
 <a id="ementa" class="anchor" href="#ementa" aria-hidden="true"><span class="octicon octicon-link"></span></a>Ementa</h2>
@@ -111,8 +111,8 @@ definir). O projeto será desenvolvido ao longo do semestre.</p>
 Alunos que faltarem a uma aula receberão zero na atividade prática daquela
 aula.  O limite de faltas em hora aula é de 18h (~3 aulas).</p>
 
-<h2>
-<a id="plágio" class="anchor" href="#pl%C3%A1gio" aria-hidden="true"><span class="octicon octicon-link"></span></a>Plágio</h2>
+<h3>
+<a id="plágio" class="anchor" href="#pl%C3%A1gio" aria-hidden="true"><span class="octicon octicon-link"></span></a>Plágio</h3>
 
 <p><strong>Cuidado com cópias e plágio.</strong> Trabalhos que forem cópias integral ou parcial
 do trabalho de colegas ou de outras fontes receberão nota <strong>zero</strong>. Citem todas
@@ -220,7 +220,7 @@ longo do semestre.</p>
 </tr>
 <tr>
 <td align="center">7</td>
-<td align="left">08-07/10 - 09/10</td>
+<td align="left">07-08/10 - 09/10</td>
 <td align="left">Solução de sistemas lineares</td>
 <td align="right"></td>
 </tr>
