Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ longo do semestre.</p>
 <th align="center">Aula</th>
 <th align="left">Data (T1 - T2)</th>
 <th align="left">Tema</th>
-<th align="right">Prática</th>
+<th align="left">Prática</th>
 </tr>
 </thead>
 <tbody>
@@ -186,91 +186,91 @@ longo do semestre.</p>
 <td align="center">1</td>
 <td align="left">26-27/08 - 28/08</td>
 <td align="left">Apresentação e introdução a algoritmos e logica de programação</td>
-<td align="right"></td>
+<td align="left"><a href="https://github.com/leouieda/matematica-especial/blob/master/praticas/sort.md">sort</a></td>
 </tr>
 <tr>
 <td align="center">2</td>
 <td align="left">02-03/09 - 04/09</td>
 <td align="left">Unix shell (básico) e Controle de versão com git</td>
-<td align="right"></td>
+<td align="left"></td>
 </tr>
 <tr>
 <td align="center">3</td>
 <td align="left">09-10/09 - 11/09</td>
 <td align="left">Python: variáveis, loops e condições</td>
-<td align="right"></td>
+<td align="left"></td>
 </tr>
 <tr>
 <td align="center">4</td>
 <td align="left">17-16/09 - 18/09</td>
 <td align="left">Python: estruturação de um programa e funções</td>
-<td align="right"></td>
+<td align="left"></td>
 </tr>
 <tr>
 <td align="center">5</td>
 <td align="left">23-24/09 - 25/09</td>
 <td align="left">Python: arrays, numpy e gráficos simples</td>
-<td align="right"></td>
+<td align="left"></td>
 </tr>
 <tr>
 <td align="center">6</td>
 <td align="left">30-01/10 - 02/10</td>
 <td align="left">Introdução a métodos numéricos. Integração</td>
-<td align="right"></td>
+<td align="left"></td>
 </tr>
 <tr>
 <td align="center">7</td>
 <td align="left">07-08/10 - 09/10</td>
 <td align="left">Solução de sistemas lineares</td>
-<td align="right"></td>
+<td align="left"></td>
 </tr>
 <tr>
 <td align="center">8</td>
 <td align="left"></td>
 <td align="left">Método dos mínimos quadrados e Interpolação</td>
-<td align="right"></td>
+<td align="left"></td>
 </tr>
 <tr>
 <td align="center">9</td>
 <td align="left"></td>
 <td align="left">Transformada de Fourier: parte 1</td>
-<td align="right"></td>
+<td align="left"></td>
 </tr>
 <tr>
 <td align="center">10</td>
 <td align="left"></td>
 <td align="left">Transformada de Fourier: parte 2</td>
-<td align="right"></td>
+<td align="left"></td>
 </tr>
 <tr>
 <td align="center">11</td>
 <td align="left"></td>
 <td align="left">Solução de equações diferenciais parciais: método das diferenças finitas</td>
-<td align="right"></td>
+<td align="left"></td>
 </tr>
 <tr>
 <td align="center">12</td>
 <td align="left"></td>
 <td align="left">Solução numérica da equação de difusão</td>
-<td align="right"></td>
+<td align="left"></td>
 </tr>
 <tr>
 <td align="center">13</td>
 <td align="left"></td>
 <td align="left">Solução numérica da equação da onda</td>
-<td align="right"></td>
+<td align="left"></td>
 </tr>
 <tr>
 <td align="center">14</td>
 <td align="left"></td>
 <td align="left">Triângulos esféricos e representação de dados em mapas</td>
-<td align="right"></td>
+<td align="left"></td>
 </tr>
 <tr>
 <td align="center">15</td>
 <td align="left"></td>
 <td align="left">Apresentação dos projetos</td>
-<td align="right"></td>
+<td align="left"></td>
 </tr>
 </tbody>
 </table>
