Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -159,7 +159,74 @@ quase sempre de qualidade.</p>
 <h2>
 <a id="software" class="anchor" href="#software" aria-hidden="true"><span class="octicon octicon-link"></span></a>Software</h2>
 
-<p>Em breve.</p>
+<p>Vocês precisarão de alguns programas para realizar as atividades práticas e o
+projeto:</p>
+
+<ul>
+<li>
+<a href="https://www.python.org/">Python</a>: linguagem de programação que vamos
+utilizar</li>
+<li>
+<a href="http://www.git-scm.com/">git</a>: sistema de controle de versão</li>
+<li>
+<a href="https://en.wikipedia.org/wiki/Bash_%28Unix_shell%29">bash</a>: "Bourne Again
+Shell" para executar programas na linha de comando</li>
+<li>Algum editor de texto (Notepad, Gedit, etc)</li>
+</ul>
+
+<p>Levarei os instaladores necessários durante a aula para que instalem tudo. Caso
+queriam instalar em outro computador, ou tentar instalar em casa, siga as instruções abaixo.</p>
+
+<p><strong>Se tiver problemas, escreva para a lista de e-mails.</strong></p>
+
+<h3>
+<a id="windows" class="anchor" href="#windows" aria-hidden="true"><span class="octicon octicon-link"></span></a>Windows</h3>
+
+<ul>
+<li>Baixe e instale o <a href="https://git-for-windows.github.io/">git for Windows</a>. Com
+isso você terá acesso ao git e ao bash.</li>
+<li>Baixe e instale o <a href="http://continuum.io/downloads#py34">Anaconda Python
+Distribution</a>. Selecione o instalador que
+reflete o seu sistema (Windows, 32 ou 64bits). Utilize <a href="http://windows.microsoft.com/en-US/windows7/find-out-32-or-64-bit">esse
+guia</a> para
+saber se seu computador é 32 ou 64bits. Tenha certeza de que está baixando
+a versão do <strong>Python 3.4</strong>, não a 2.7.</li>
+<li>Baixe e instale o <a href="https://notepad-plus-plus.org/">Notepad++</a>
+</li>
+</ul>
+
+<h3>
+<a id="linux" class="anchor" href="#linux" aria-hidden="true"><span class="octicon octicon-link"></span></a>Linux</h3>
+
+<ul>
+<li>Você já deve ter o bash instalado.</li>
+<li>Você também já deve ter um editor de texto instalado.</li>
+<li>Instale o git pelo seu gerenciador de pacotes. Por exemplo, no Ubuntu e
+derivados digite em um terminal: <code>sudo apt-get install git</code>
+</li>
+<li>Baixe e instale o <a href="http://continuum.io/downloads#py34">Anaconda Python
+Distribution</a>. Selecione o instalador que
+reflete o seu sistema (Linux, 32 ou 64bits). Tenha certeza de que está baixando
+a versão do <strong>Python 3.4</strong>, não a 2.7.</li>
+</ul>
+
+<h3>
+<a id="mac" class="anchor" href="#mac" aria-hidden="true"><span class="octicon octicon-link"></span></a>Mac</h3>
+
+<ul>
+<li>Você já deve ter o bash instalado. Procure o aplicativo "Terminal" em
+<code>/Applications/Utilities</code>.</li>
+<li>Para instalar o git: <strong>MacOS &gt; 10.9</strong>, baixe e instale o mais recente
+instalador com nome "mavericks"
+<a href="http://sourceforge.net/projects/git-osx-installer/files/">dessa lista</a>.
+<strong>MacOS10.5-10.8</strong>, use o instalador com nome "snow-leopard" da lista.</li>
+<li>Baixe e instale o editor de texto
+<a href="http://www.sublimetext.com/">Sublime Text</a>.</li>
+<li>Baixe e instale o <a href="http://continuum.io/downloads#py34">Anaconda Python
+Distribution</a>. Selecione o instalador que
+reflete o seu sistema (Mac OSX). Tenha certeza de que está baixando
+a versão do <strong>Python 3.4</strong>, não a 2.7.</li>
+</ul>
 
 <h2>
 <a id="projeto" class="anchor" href="#projeto" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projeto</h2>
@@ -178,7 +245,8 @@ longo do semestre.</p>
 <th align="center">Aula</th>
 <th align="left">Data (T1 - T2)</th>
 <th align="left">Tema</th>
-<th align="left">Prática</th>
+<th align="center">Leitura</th>
+<th align="center">Prática</th>
 </tr>
 </thead>
 <tbody>
@@ -186,91 +254,108 @@ longo do semestre.</p>
 <td align="center">1</td>
 <td align="left">26-27/08 - 28/08</td>
 <td align="left">Apresentação e introdução a algoritmos e logica de programação</td>
-<td align="left"><a href="https://github.com/leouieda/matematica-especial/blob/master/praticas/sort.md">sort</a></td>
+<td align="center"></td>
+<td align="center"><a href="https://github.com/leouieda/matematica-especial/blob/master/praticas/sort.md">sort</a></td>
 </tr>
 <tr>
 <td align="center">2</td>
 <td align="left">02-03/09 - 04/09</td>
 <td align="left">Unix shell (básico) e Controle de versão com git</td>
-<td align="left"></td>
+<td align="center">
+<a href="https://try.github.io/levels/1/challenges/1">Tutorial de git</a>, <a href="http://swcarpentry.github.io/shell-novice/01-filedir.html">Arquivos e pastas</a>
+</td>
+<td align="center"></td>
 </tr>
 <tr>
 <td align="center">3</td>
 <td align="left">09-10/09 - 11/09</td>
 <td align="left">Python: variáveis, loops e condições</td>
-<td align="left"></td>
+<td align="center"></td>
+<td align="center"></td>
 </tr>
 <tr>
 <td align="center">4</td>
 <td align="left">17-16/09 - 18/09</td>
 <td align="left">Python: estruturação de um programa e funções</td>
-<td align="left"></td>
+<td align="center"></td>
+<td align="center"></td>
 </tr>
 <tr>
 <td align="center">5</td>
 <td align="left">23-24/09 - 25/09</td>
 <td align="left">Python: arrays, numpy e gráficos simples</td>
-<td align="left"></td>
+<td align="center"></td>
+<td align="center"></td>
 </tr>
 <tr>
 <td align="center">6</td>
 <td align="left">30-01/10 - 02/10</td>
 <td align="left">Introdução a métodos numéricos. Integração</td>
-<td align="left"></td>
+<td align="center"></td>
+<td align="center"></td>
 </tr>
 <tr>
 <td align="center">7</td>
 <td align="left">07-08/10 - 09/10</td>
 <td align="left">Solução de sistemas lineares</td>
-<td align="left"></td>
+<td align="center"></td>
+<td align="center"></td>
 </tr>
 <tr>
 <td align="center">8</td>
 <td align="left"></td>
 <td align="left">Método dos mínimos quadrados e Interpolação</td>
-<td align="left"></td>
+<td align="center"></td>
+<td align="center"></td>
 </tr>
 <tr>
 <td align="center">9</td>
 <td align="left"></td>
 <td align="left">Transformada de Fourier: parte 1</td>
-<td align="left"></td>
+<td align="center"></td>
+<td align="center"></td>
 </tr>
 <tr>
 <td align="center">10</td>
 <td align="left"></td>
 <td align="left">Transformada de Fourier: parte 2</td>
-<td align="left"></td>
+<td align="center"></td>
+<td align="center"></td>
 </tr>
 <tr>
 <td align="center">11</td>
 <td align="left"></td>
 <td align="left">Solução de equações diferenciais parciais: método das diferenças finitas</td>
-<td align="left"></td>
+<td align="center"></td>
+<td align="center"></td>
 </tr>
 <tr>
 <td align="center">12</td>
 <td align="left"></td>
 <td align="left">Solução numérica da equação de difusão</td>
-<td align="left"></td>
+<td align="center"></td>
+<td align="center"></td>
 </tr>
 <tr>
 <td align="center">13</td>
 <td align="left"></td>
 <td align="left">Solução numérica da equação da onda</td>
-<td align="left"></td>
+<td align="center"></td>
+<td align="center"></td>
 </tr>
 <tr>
 <td align="center">14</td>
 <td align="left"></td>
 <td align="left">Triângulos esféricos e representação de dados em mapas</td>
-<td align="left"></td>
+<td align="center"></td>
+<td align="center"></td>
 </tr>
 <tr>
 <td align="center">15</td>
 <td align="left"></td>
 <td align="left">Apresentação dos projetos</td>
-<td align="left"></td>
+<td align="center"></td>
+<td align="center"></td>
 </tr>
 </tbody>
 </table>
