Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -175,7 +175,11 @@ Shell" para executar programas na linha de comando</li>
 </ul>
 
 <p>Levarei os instaladores necessários durante a aula para que instalem tudo. Caso
-queriam instalar em outro computador, ou tentar instalar em casa, siga as instruções abaixo.</p>
+queriam instalar em outro computador, ou tentar instalar em casa, siga as
+instruções abaixo.</p>
+
+<p>Vocês também devem criar uma conta gratuita no site
+<a href="https://github.com/">github.com</a></p>
 
 <p><strong>Se tiver problemas, escreva para a lista de e-mails.</strong></p>
 
@@ -262,7 +266,7 @@ longo do semestre.</p>
 <td align="left">02-03/09 - 04/09</td>
 <td align="left">Unix shell (básico) e Controle de versão com git</td>
 <td align="center">
-<a href="https://try.github.io/levels/1/challenges/1">Tutorial de git</a>, <a href="http://swcarpentry.github.io/shell-novice/01-filedir.html">Arquivos e pastas</a>
+<a href="http://swcarpentry.github.io/shell-novice/00-intro.html">Introdução ao shell</a>, <a href="http://swcarpentry.github.io/shell-novice/01-filedir.html">Arquivos e pastas</a>, <a href="https://try.github.io/levels/1/challenges/1">Tutorial interativo de git</a>, <a href="http://swcarpentry.github.io/git-novice/">Lição de git</a>
 </td>
 <td align="center"></td>
 </tr>
