Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ longo do semestre.</p>
 <td align="center">
 <a href="http://swcarpentry.github.io/shell-novice/00-intro.html">Introdução ao shell</a>, <a href="http://swcarpentry.github.io/shell-novice/01-filedir.html">Arquivos e pastas</a>, <a href="https://try.github.io/levels/1/challenges/1">Tutorial interativo de git</a>, <a href="http://swcarpentry.github.io/git-novice/">Lição de git</a>
 </td>
-<td align="center"></td>
+<td align="center"><a href="https://github.com/leouieda/matematica-especial/blob/master/praticas/git.md">git</a></td>
 </tr>
 <tr>
 <td align="center">3</td>
