Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -156,6 +156,10 @@ em <strong>inglês</strong> então busquem com palavras chave nessa língua. Exe
 é um dos melhores e mais utilizados recursos para programação. As repostas são
 quase sempre de qualidade.</p>
 
+<p>Dicas para usar o terminal: <a href="http://www.if.ufrj.br/%7Esandra/MetComp/doc/unix_helder.pdf">Notas de aula Métodos Computacionais em Física, UFRJ</a>. Mais dicas e material na página da <a href="http://www.if.ufrj.br/%7Esandra/MetComp/2012-2/">disciplina</a></p>
+
+<p>Uma boa introdução ao linux em Português <a href="http://www.guiafoca.org/?page_id=14">aqui</a></p>
+
 <h2>
 <a id="software" class="anchor" href="#software" aria-hidden="true"><span class="octicon octicon-link"></span></a>Software</h2>
 
