Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
       <h1>
 <a id="matemática-especial-i-ime03-1366" class="anchor" href="#matem%C3%A1tica-especial-i-ime03-1366" aria-hidden="true"><span class="octicon octicon-link"></span></a>Matemática Especial I (IME03-1366)</h1>
 
+<p><img src="https://raw.githubusercontent.com/leouieda/matematica-especial/master/images/mesh.png" alt=""></p>
+
 <p>Disciplina da graduação em Oceanografia da UERJ.</p>
 
 <p><strong>Aulas:</strong></p>
@@ -31,9 +33,17 @@
 <li>Turma 2: Sexta 7:50 - 12:20</li>
 </ul>
 
+<p><strong>ATENÇÃO</strong>: As aulas das duas turmas serão ministradas na sala 6145-2F a
+partir do dia 10/09/2015.</p>
+
 <p><strong>Professor:</strong> <a href="http://www.leouieda.com/">Leonardo Uieda</a> - Sala 2019A</p>
 
 <p><strong>Atendimento:</strong> Segunda 13:30 - 14:30</p>
+
+<p><strong>Laboratório:</strong> Os alunos podem utilizar o laboratório LAGEX (sala 2031A) para
+trabalhar nas práticas fora da aula. O LAGEX conta com computadores com Ubuntu
+Linux com git e Python já instalados. Também há mesas e internet para os que
+queiram trabalhar com seu próprio computador.</p>
 
 <p><strong>Lista de e-mail:</strong> Os alunos devem se cadastrar na lista de e-mail do curso.
 Use o link abaixo para cadastrar seu e-mail:</p>
