--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 <li>Turma 2: Sexta 7:50 - 12:20</li>
 </ul>
 
-<p><strong>ATENÇÃO</strong>: As aulas das duas turmas serão ministradas na sala 6145-2F a
-partir do dia 10/09/2015.</p>
+<p><strong>ATENÇÃO</strong>: As aulas das duas turmas serão ministradas na sala <del>6145-2F a
+partir do dia 10/09/2015</del> <strong>6134F</strong> a partir do dia 16/09/2015.</p>
 
 <p><strong>Professor:</strong> <a href="http://www.leouieda.com/">Leonardo Uieda</a> - Sala 2019A</p>
 
