Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -131,17 +131,15 @@ suas fontes de informação (mesmo que seja a Wikipedia).</p>
 <h2>
 <a id="bibliografia" class="anchor" href="#bibliografia" aria-hidden="true"><span class="octicon octicon-link"></span></a>Bibliografia</h2>
 
-<p><a href="http://swcarpentry.github.io/git-novice/">Software Carpentry v5.3: Version control with
-git</a></p>
+<p><a href="http://software-carpentry.org/">Software Carpentry</a>. 
+Especificamente as lições:</p>
 
-<p><a href="http://swcarpentry.github.io/shell-novice/">Software Carpentry v5.3: The Unix
-Shell</a></p>
-
-<p><a href="http://swcarpentry.github.io/python-novice-inflammation/">Software Carpentry v5.3: Programming with
-Python</a></p>
-
-<p><a href="http://software-carpentry.org/v4/python/index.html">Software Carpentry v4:
-Python</a></p>
+<ul>
+<li>Version control with git (v5.3)</li>
+<li>The Unix Shell (v5.3)</li>
+<li>Programming with Python (v5.3)</li>
+<li>Programming with Python (v4)</li>
+</ul>
 
 <p>Python Scientific Lecture Notes.
 <a href="http://scipy-lectures.github.io/">http://scipy-lectures.github.io/</a></p>
@@ -270,7 +268,7 @@ longo do semestre.</p>
 <tr>
 <td align="center">1</td>
 <td align="left">Apresentação e introdução a algoritmos e logica de programação</td>
-<td align="center"></td>
+<td align="center"><a href="http://software-carpentry.org/v4/python/intro.html">Software Carpentry: Introdução</a></td>
 <td align="center"><a href="https://github.com/leouieda/matematica-especial/blob/master/praticas/sort.md">sort</a></td>
 </tr>
 <tr>
@@ -283,21 +281,23 @@ longo do semestre.</p>
 </tr>
 <tr>
 <td align="center">3</td>
-<td align="left">Python: variáveis, loops, condições, leitura de arquivos e gráficos simples</td>
+<td align="left">Python: variáveis, loops, condições e gráficos simples</td>
 <td align="center">
-<a href="http://software-carpentry.org/lessons.html">Lições de Python do Software Carpentry</a>, <a href="http://scipy-lectures.github.io/intro/matplotlib/matplotlib.html">Tutorial matplotlib</a>, <a href="http://matplotlib.org/gallery.html">Galeria matplotlib</a>
+<a href="http://software-carpentry.org">Lições de Python do Software Carpentry</a>, <a href="http://scipy-lectures.github.io/intro/matplotlib/matplotlib.html">Tutorial matplotlib</a>, <a href="http://matplotlib.org/gallery.html">Galeria matplotlib</a>
 </td>
 <td align="center"><a href="https://github.com/leouieda/mat-esp-python-intro-2015">python-intro</a></td>
 </tr>
 <tr>
 <td align="center">4</td>
-<td align="left">Python: estruturação de um programa, funções e programação defensiva</td>
-<td align="center"></td>
-<td align="center"></td>
+<td align="left">Python: Jupyter notebook, lendo dados de arquivos e programas simples</td>
+<td align="center">
+<a href="http://jupyter.org/">Projeto Jupyter</a>, <a href="http://software-carpentry.org">Lições de Python v4 do Software Carpentry</a> , <a href="http://software-carpentry.org">Lições de Python v5.3 do Software Carpentry</a>
+</td>
+<td align="center"><a href="https://github.com/mat-esp-uerj/python-intro-2">python-intro-2</a></td>
 </tr>
 <tr>
 <td align="center">5</td>
-<td align="left">Python: numpy, mapas e gráficos avançados</td>
+<td align="left">Python: estruturação de um programa, funções e programação defensiva</td>
 <td align="center"></td>
 <td align="center"></td>
 </tr>
