Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <h1>
 <a id="matemática-especial-i-ime03-1366" class="anchor" href="#matem%C3%A1tica-especial-i-ime03-1366" aria-hidden="true"><span class="octicon octicon-link"></span></a>Matemática Especial I (IME03-1366)</h1>
 
-<p><img src="https://raw.githubusercontent.com/leouieda/matematica-especial/master/images/mesh.png" alt=""></p>
+<p><img src="https://raw.githubusercontent.com/leouieda/matematica-especial/master/images/mesh.png" alt="images/mesh.png"></p>
 
 <p>Disciplina da graduação em Oceanografia da UERJ.</p>
 
@@ -131,7 +131,7 @@ suas fontes de informação (mesmo que seja a Wikipedia).</p>
 <h2>
 <a id="bibliografia" class="anchor" href="#bibliografia" aria-hidden="true"><span class="octicon octicon-link"></span></a>Bibliografia</h2>
 
-<p><a href="http://software-carpentry.org/">Software Carpentry</a>. 
+<p><a href="http://software-carpentry.org/">Software Carpentry</a>.
 Especificamente as lições:</p>
 
 <ul>
@@ -370,6 +370,13 @@ longo do semestre.</p>
 <p><a href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" src="https://i.creativecommons.org/l/by/4.0/88x31.png"></a><br>"Material didático da disciplina Matemática Especial"
 by <a href="http://www.leouieda.com/">Leonardo Uieda</a> is licensed under a
 <a href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
+
+<h2>
+<a id="credits" class="anchor" href="#credits" aria-hidden="true"><span class="octicon octicon-link"></span></a>Credits</h2>
+
+<p>Original logo image
+(<a href="https://github.com/leouieda/matematica-especial/blob/master/images/mesh.png">images/mesh.png</a>)
+by <a href="https://flic.kr/p/ch8t4W">NASA Goddard Space Flight Center</a>.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/leouieda/matematica-especial">Matemática Especial I (IME03-1366)</a> is maintained by <a href="https://github.com/leouieda">leouieda</a>.</span>
