Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -255,12 +255,13 @@ a versão do <strong>Python 3.4</strong>, não a 2.7.</li>
 <p>Esse cronograma ainda não é definitivo. Provavelmente sofrerá alterações ao
 longo do semestre.</p>
 
+<p><strong>Cada prática inclui links e referências para o material relevante.</strong></p>
+
 <table>
 <thead>
 <tr>
 <th align="center">Aula</th>
 <th align="left">Tema</th>
-<th align="center">Leitura</th>
 <th align="center">Prática</th>
 </tr>
 </thead>
@@ -268,97 +269,66 @@ longo do semestre.</p>
 <tr>
 <td align="center">1</td>
 <td align="left">Apresentação e introdução a algoritmos e logica de programação</td>
-<td align="center"><a href="http://software-carpentry.org/v4/python/intro.html">Software Carpentry: Introdução</a></td>
 <td align="center"><a href="https://github.com/leouieda/matematica-especial/blob/master/praticas/sort.md">sort</a></td>
 </tr>
 <tr>
 <td align="center">2</td>
 <td align="left">Unix shell (básico) e Controle de versão com git</td>
-<td align="center">
-<a href="http://swcarpentry.github.io/shell-novice/00-intro.html">Introdução ao shell</a>, <a href="http://swcarpentry.github.io/shell-novice/01-filedir.html">Arquivos e pastas</a>, <a href="https://try.github.io/levels/1/challenges/1">Tutorial interativo de git</a>, <a href="http://swcarpentry.github.io/git-novice/">Lição de git</a>
-</td>
 <td align="center"><a href="https://github.com/leouieda/matematica-especial/blob/master/praticas/git.md">git</a></td>
 </tr>
 <tr>
 <td align="center">3</td>
 <td align="left">Python: variáveis, loops, condições e gráficos simples</td>
-<td align="center">
-<a href="http://software-carpentry.org">Lições de Python do Software Carpentry</a>, <a href="http://scipy-lectures.github.io/intro/matplotlib/matplotlib.html">Tutorial matplotlib</a>, <a href="http://matplotlib.org/gallery.html">Galeria matplotlib</a>
-</td>
 <td align="center"><a href="https://github.com/leouieda/mat-esp-python-intro-2015">python-intro</a></td>
 </tr>
 <tr>
 <td align="center">4</td>
 <td align="left">Python: Jupyter notebook, lendo dados de arquivos e programas simples</td>
-<td align="center">
-<a href="http://jupyter.org/">Projeto Jupyter</a>, <a href="http://software-carpentry.org">Lições de Python v4 do Software Carpentry</a> , <a href="http://software-carpentry.org">Lições de Python v5.3 do Software Carpentry</a>
-</td>
-<td align="center"><a href="https://github.com/mat-esp-uerj/python-intro-2">python-intro-2</a></td>
+<td align="center"><a href="https://github.com/leouieda/python-intro-2">python-intro-2</a></td>
 </tr>
 <tr>
 <td align="center">5</td>
-<td align="left">Python: estruturação de um programa, funções e programação defensiva</td>
-<td align="center"></td>
-<td align="center"></td>
+<td align="left">Integração numérica</td>
+<td align="center"><a href="https://github.com/leouieda/mat-esp-integracao">integracao</a></td>
 </tr>
 <tr>
 <td align="center">6</td>
-<td align="left">Introdução a métodos numéricos. Integração</td>
-<td align="center"></td>
+<td align="left">Matrizes e vetores</td>
 <td align="center"></td>
 </tr>
 <tr>
 <td align="center">7</td>
 <td align="left">Solução de sistemas lineares</td>
 <td align="center"></td>
-<td align="center"></td>
 </tr>
 <tr>
 <td align="center">8</td>
-<td align="left">Método dos mínimos quadrados e Interpolação</td>
-<td align="center"></td>
+<td align="left">Python: estruturação de um programa, funções e programação defensiva</td>
 <td align="center"></td>
 </tr>
 <tr>
 <td align="center">9</td>
-<td align="left">Transformada de Fourier: parte 1</td>
-<td align="center"></td>
+<td align="left">Método dos mínimos quadrados</td>
 <td align="center"></td>
 </tr>
 <tr>
 <td align="center">10</td>
-<td align="left">Transformada de Fourier: parte 2</td>
-<td align="center"></td>
+<td align="left">Transformada de Fourier</td>
 <td align="center"></td>
 </tr>
 <tr>
 <td align="center">11</td>
 <td align="left">Solução de equações diferenciais parciais: método das diferenças finitas</td>
 <td align="center"></td>
-<td align="center"></td>
 </tr>
 <tr>
 <td align="center">12</td>
-<td align="left">Solução numérica da equação de difusão</td>
-<td align="center"></td>
+<td align="left">Triângulos esféricos e representação de dados em mapas</td>
 <td align="center"></td>
 </tr>
 <tr>
 <td align="center">13</td>
-<td align="left">Solução numérica da equação da onda</td>
-<td align="center"></td>
-<td align="center"></td>
-</tr>
-<tr>
-<td align="center">14</td>
-<td align="left">Triângulos esféricos e representação de dados em mapas</td>
-<td align="center"></td>
-<td align="center"></td>
-</tr>
-<tr>
-<td align="center">15</td>
 <td align="left">Apresentação dos projetos</td>
-<td align="center"></td>
 <td align="center"></td>
 </tr>
 </tbody>
