Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ longo do semestre.</p>
 <tr>
 <td align="center">6</td>
 <td align="left">Matrizes e vetores</td>
-<td align="center"></td>
+<td align="center"><a href="https://github.com/leouieda/mat-esp-matrizes-vetores">matrizes-vetores</a></td>
 </tr>
 <tr>
 <td align="center">7</td>
